--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <p class="pork">Lorem ipsum dolor sit amet. </p>
     <p class="pork">Lorem ipsum dolor sit amet. </p>
   </ul>
+  <footer>footer</footer>
 </body>
 </html>
